--- a/public/js/components/app_nav/template.html
+++ b/public/js/components/app_nav/template.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
       </button>
-      <a href="#" class="navbar-brand" id="app-label">Textpedia</a>
+      <a v-link="{name: 'home'}" class="navbar-brand" id="app-label">Textpedia</a>
   </div>
   <!-- Collection of nav links and other content for toggling -->
   <div id="navbarCollapse" class="collapse navbar-collapse">
