added banner img and sub heading text to home

--- a/public/js/components/app_home/template.html
+++ b/public/js/components/app_home/template.html
@@ -1,2 +1,13 @@
-<h1>Welcome to Textpedia...</h1>
-<p>Your virtual research assistant in the cloud!</p>
+<section class="row">
+  <figure>
+    <img src="imgs/research.jpg" alt="pix of research" class="img-responsive" id="banner">
+  </figure>
+  <div class="row">
+    <div class="col-sm-6">
+      <h3 class="text-center">Why Tetxpedia?</h3>
+    </div>
+    <div class="col-sm-6">
+      <h3 class="text-center">This is Textpedia</h3>
+    </div>
+  </div>
+</section>
