--- a/views/layout.html
+++ b/views/layout.html
@@ -4,10 +4,10 @@
   <% include ./partials/head.html %>
 </head>
 <body>
-  <main class="container-fluid">
+  <main class="container">
       <%- body%>
   </main>
-  <footer class="container-fluid">
+  <footer class="container">
     <% include ./partials/footer.html %>
   </footer>
   <script src="js/main.js"></script>
