--- a/public/js/components/app_home/template.html
+++ b/public/js/components/app_home/template.html
@@ -1,50 +1,64 @@
 <section class="row">
+  <div id="what-is-txtp">
+    <button class="btn btn-default btn-default btn-block"
+      data-toggle="modal" data-target="#whyTxtpModal">What is Tetxpedia?
+    </button>
+  </div>
+  <br>
   <figure>
     <img src="imgs/research.jpg" alt="pix of research" class="img-responsive" id="banner">
   </figure>
-  <div class="row">
-    <div class="col-sm-6">
-      <h3 class="text-center">Why Tetxpedia?</h3>
-      <p>The rationale for Textpedia can be be understood by considering a sample use case.</p>
-      <p>
-        Imagine for a moment that you're in a meeting with an important client and several
-        other participants are present. The presenter or the client mentions a word, or phrase
-        you have only the vaguest idea about.
-      </p>
-      <p>
-        Because of the importance of this meeting you can't use your phone to research the keyword,
-        but you know that if you don't make a note about it or something like that, the
-        pressures of the day will probably cause you to forget.
-      </p>
-      <p>
-        You'd really like to know what the keyword/phrase means so what do you do?
-      </p>
-      <p>
-        You could...
-        <ol>
-          <li>
-            Make a reminder to yourself, imagine having to take a minute or so to covertly
-            type out this reminder while the gist of the meeting passes you by. Not good!
-          </li>
-          <li>
-            Trust in your memory to remember to check out the keyword at the end of the day.
-            Even worse!
-          </li>
-          <li>
-            Spend 10 seconds or less to type out the keyword/phrase and SMS it to
-            Textpedia safe in the knowledge that when you check tyour mail at the end of
-            the day, you'll have a nicely formatted preliminary report waiting for you.
-            This allows you to decide whether or not you want to dig deeper into the
-            subject. Awesome!
-          </li>
-        </ol>
-      </p>
-      <p>What are you waiting for?</p>
-      <button class="btn btn-primary btn-default pull-right"
-        @click.stop.prevent="signup">Join Now!</button>
-    </div>
-    <div class="col-sm-6">
-      <h3 class="text-center">This is Textpedia</h3>
+</section>
+<!--Why Textpedia modal-->
+<div class="modal fade" id="whyTxtpModal" tabindex="-1" role="dialog" aria-labelledby="whyTxtpModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" id="closewhyTxtpModal" data-dismiss="modal" aria-label="Close"
+        @click.prevent><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="whyTxtpModalLabel">Why Tetxpedia?</h4>
+      </div>
+      <div class="modal-body">
+        <p>What Textpedia is can be be understood by considering a sample use case.</p>
+        <p>
+          Imagine for a moment that you're in a meeting with an important client and several
+          other participants are present. The presenter or the client mentions a word, or phrase
+          you have only the vaguest idea about.
+        </p>
+        <p>
+          Because of the importance of this meeting you can't use your phone to research the keyword,
+          but you know that if you don't make a note about it or something like that, the
+          pressures of the day will probably cause you to forget.
+        </p>
+        <p>
+          You'd really like to know what the keyword/phrase means so what do you do?
+        </p>
+        <p>
+          You could...
+          <ol>
+            <li>
+              Make a reminder to yourself, imagine having to take a minute or so to covertly
+              type out this reminder while the gist of the meeting passes you by. Not good!
+            </li>
+            <li>
+              Trust in your memory to remember to check out the keyword at the end of the day.
+              Even worse!
+            </li>
+            <li>
+              Spend 10 seconds or less to type out the keyword/phrase and SMS it to
+              Textpedia safe in the knowledge that when you check your mail at the end of
+              the day, you'll have a nicely formatted preliminary report waiting for you.
+              This allows you to decide whether or not you want to dig deeper into the
+              subject. Awesome!
+            </li>
+          </ol>
+        </p>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary btn-default pull-right" data-dismiss="modal">
+          Got it
+      </button>
+      </div>
     </div>
   </div>
-</section>
+</div>
