improved modal action on landing page

--- a/public/js/components/app_home/template.html
+++ b/public/js/components/app_home/template.html
@@ -55,8 +55,11 @@
         </p>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-primary btn-default pull-right" data-dismiss="modal">
+        <button class="btn btn-primary btn-default pull-left" data-dismiss="modal">
           Got it
+      </button>
+      <button class="btn btn-success btn-default pull-right" @click.stop.prevent="signup">
+        Join Now!
       </button>
       </div>
     </div>
