--- a/public/js/components/app_signup/template.html
+++ b/public/js/components/app_signup/template.html
@@ -3,12 +3,14 @@
     <h1><i class="fa fa-sign-in"></i> Sign Up!</h1>
     <form>
       <div class="form-group">
-        <label for="email">Email Address:</label>
-        <input type="email" class="form-control" id="email" placeholder="Email" v-model="email">
+        <label for="phone-number">Phone Number:</label>
+        <input type="tel" class="form-control" id="phone" v-model="phoneNumber">
+        <span id="valid-msg" class="hide">✓ Valid</span>
+        <span id="error-msg" class="hide">Invalid number</span>
       </div>
       <div class="form-group">
-        <label for="phone-number">Phone Number:</label>
-        <input type="text" class="form-control" id="phone-number" v-model="phoneNumber">
+        <label for="email">Email Address:</label>
+        <input type="email" class="form-control" id="email" placeholder="Email" v-model="email">
       </div>
       <div class="form-group">
         <button class="btn btn-primary btn-large pull-right"
