--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/intlTelInput.css">
 <style>
   .errMsg {
     font-family: monospace;
