--- a/public/js/components/app_confirm/template.html
+++ b/public/js/components/app_confirm/template.html
@@ -2,7 +2,9 @@
   <h1><i class="fa fa-sign-in"></i> Confirm your identity</h1>
   <p>
     Please confirm your identity by entering the token sent to the email address
-    you provided. Thank you.
+    you provided. <strong>Remember the token is valid for 5 minutes</strong>.
+    Please do not navigate away from this screen until you have confirmed your identity.
+    If you navigate away you will need to wait 2 hours to retry. Thank you.
   </p>
   <form>
     <div class="form-group">
