implemeted JWT auth for confirmation of temporary token sent to signing up user

--- a/public/js/components/app_confirm/template.html
+++ b/public/js/components/app_confirm/template.html
@@ -4,7 +4,8 @@
     Please confirm your identity by entering the token sent to the email address
     you provided. <strong>Remember the token is valid for 5 minutes</strong>.
     Please do not navigate away from this screen until you have confirmed your identity.
-    If you navigate away you will need to wait 2 hours to retry. Thank you.
+    If you navigate away or fail to confirm your identity before the token expires
+     you will need to wait 2 hours to retry. Thank you.
   </p>
   <form>
     <div class="form-group">
