implemented spinner for signup feedback

--- a/public/js/components/app_signup/template.html
+++ b/public/js/components/app_signup/template.html
@@ -25,6 +25,7 @@
     </form>
   </div>
 </section>
+<div id="spinner"></div>
 <span data-toggle="modal" data-target="#signupModal" id="showDetails"></span>
 <!--Signup confirmation modal-->
 <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalLabel">
