completed the Textpedia MVP

--- a/public/js/components/app_how-it-works/template.html
+++ b/public/js/components/app_how-it-works/template.html
@@ -1,3 +1,48 @@
-<section>
-  <h1>How it works!</h1>
+<section class="row">
+  <div class="col-sm-6" id="left">
+    <h3>How it works!</h3>
+    <p>Using Textpedia is as simple as 1 - 2 - 3!</p>
+    <p>
+      <ol>
+        <li>
+          Signup using your phone number and email address, a token will be emailed to
+          you. You'll use this token in the next step to confirm your identity.
+        </li>
+        <li>
+          Confirm your identity by entering the token at the "confirmation" page, upon
+          successful completion of the signup process, a welcome email will be sent to
+          you with the endpoint phone number you can send your keywords to.
+        </li>
+        <li>
+          Whenever you need to conduct preliminary research on any keyword9s, simply SMS
+          that keyword(s) to the endpoint phone number. When the report has been generated,
+          it will be sent to your email and an SMS notification will be delivered to you.
+        </li>
+      </ol>
+    </p>
+  </div>
+  <div class="col-sm-6" id="right">
+    <h3>Example usage</h3>
+    <p>
+      <ol>
+        <li>
+          SMS "Abraham Lincoln" to the endpoint phone number. Note that this is a
+          single keyword consisting of two words. Multiple keywords are comma separated
+          as shown in the next example.
+        </li>
+        <li>
+          SMS "Abraham Lincoln", "Alber Einstein", "Milky Way" to the endpoint phone number.
+          Note that the search is for three keywords, the report will consist of three sections
+          one per keyword.
+        </li>
+      </ol>
+    </p>
+    <p>
+      Finally, ensure that the keywords are spelled correctly, while Tetxpedia queries are
+      case insentive, at this time spell checking is not available. Enjoy the Textpedia service.
+    </p>
+  </div>
+  <button class="btn btn-primary btn-default btn-block" @click.stop.prevent="showSignup">
+    Sign up!
+  </button>
 </section>
