--- a/public/js/components/app_home/template.html
+++ b/public/js/components/app_home/template.html
@@ -59,7 +59,7 @@
           Got it
       </button>
       <button class="btn btn-success btn-default pull-right" @click.stop.prevent="signup">
-        Join Now!
+        Sign up Now!
       </button>
       </div>
     </div>
