resolved vue.js fragment wahala

--- a/public/assets/js/components/app_how-it-works/template.html
+++ b/public/assets/js/components/app_how-it-works/template.html
@@ -14,7 +14,7 @@
           you with the endpoint phone number you can send your keywords to.
         </li>
         <li>
-          Whenever you need to conduct preliminary research on any keyword9s, simply SMS
+          Whenever you need to conduct preliminary research on any keywords, simply SMS
           that keyword(s) to the endpoint phone number. When the report has been generated,
           it will be sent to your email and an SMS notification will be delivered to you.
         </li>
@@ -31,15 +31,15 @@
           as shown in the next example.
         </li>
         <li>
-          SMS "Abraham Lincoln", "Alber Einstein", "Milky Way" to the endpoint phone number.
-          Note that the search is for three keywords, the report will consist of three sections
+          SMS "Abraham Lincoln", "Albert Einstein", "Milky Way" to the endpoint phone number.
+          Note that the search is for three keywords, the report will consist of three sections,
           one per keyword.
         </li>
       </ol>
     </p>
     <p>
       Finally, ensure that the keywords are spelled correctly, while Tetxpedia queries are
-      case insentive, at this time spell checking is not available. Enjoy the Textpedia service.
+      case insensitive, at this time spell checking is not available. Enjoy the Textpedia service.
     </p>
   </div>
   <button class="btn btn-primary btn-default btn-block" @click.stop.prevent="showSignup">
